--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,19 @@ jobs:
 
       # run tests!
       - run: yarn test
+      - run:
+          name: Deploy Master to Heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
 
-deployment:
-  staging:
-    branch: master
-    heroku:
-      appname: cc-test-demo
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
